// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Car: Represents a car available in the dealership.
Dealer: Represents an individual or company that sells cars.
Customer: Represents a customer of the dealership.
Employee: Represents an employee working at the dealership.
FinanceOption: Available finance options for purchasing cars.
Insurance: Car insurance details related to dealership offerings.
Inventory: Contains current stock details of cars in dealership inventory.
Repair: Details repair work done on vehicles.
Sale: Represents a sale transaction of a car to a customer.
ServiceAppointment: Holds details of service appointments for cars.
ShowroomVisit: Tracks visits made by potential customers to the showroom.
Warranty: Details warranty information of cars sold.
'''
}

Table Car {
    id INTEGER [primary key]
    make VARCHAR 
    model VARCHAR 
    year INTEGER 
    description VARCHAR 
    dealer_id INTEGER 
    }

Table Dealer {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    contact_number VARCHAR 
    inventory_limit INTEGER 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    phone VARCHAR 
    unpaid_sales_count INTEGER 
    }

Table Employee {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    position VARCHAR 
    email VARCHAR 
    }

Table FinanceOption {
    id INTEGER [primary key]
    name VARCHAR 
    description VARCHAR 
    interest_rate INTEGER 
    }

Table Insurance {
    id INTEGER [primary key]
    name VARCHAR 
    policy_details VARCHAR 
    monthly_premium INTEGER 
    }

Table Inventory {
    id INTEGER [primary key]
    car_id INTEGER 
    stock_amount INTEGER 
    location VARCHAR 
    total_stock INTEGER 
    }

Table Repair {
    id INTEGER [primary key]
    car_id INTEGER 
    repair_date DATETIME 
    cost INTEGER 
    repair_shop VARCHAR 
    description VARCHAR 
    }

Table Sale {
    id INTEGER [primary key]
    car_id INTEGER 
    customer_id INTEGER 
    sale_date DATETIME 
    amount INTEGER 
    paid BOOLEAN 
    }

Table ServiceAppointment {
    id INTEGER [primary key]
    car_id INTEGER 
    appointment_date DATETIME 
    serviced_by VARCHAR 
    notes VARCHAR 
    }

Table ShowroomVisit {
    id INTEGER [primary key]
    customer_id INTEGER 
    visit_date DATETIME 
    notes VARCHAR 
    }

Table Warranty {
    id INTEGER [primary key]
    car_id INTEGER 
    coverage_details VARCHAR 
    valid_until DATETIME 
    }



// Relationships
    Ref: Car.(dealer_id) < Dealer.(id)
    Ref: Inventory.(car_id) < Car.(id)
    Ref: Repair.(car_id) < Car.(id)
    Ref: Sale.(car_id) < Car.(id)
    Ref: Sale.(customer_id) < Customer.(id)
    Ref: ServiceAppointment.(car_id) < Car.(id)
    Ref: ShowroomVisit.(customer_id) < Customer.(id)
    Ref: Warranty.(car_id) < Car.(id)
